change UI style

--- a/app/src/main/res/drawable-v24/corner_user_photo.xml
+++ b/app/src/main/res/drawable-v24/corner_user_photo.xml
@@ -4,7 +4,7 @@
     android:shape="oval"
     android:useLevel="false">
 
-    <solid android:color="#ffffff"/>
+    <solid android:color="@color/orange"/>
     <size android:width="50dp"
         android:height="50dp"/>
 </shape>
