--- a/app/src/main/res/layout/dialog_success.xml
+++ b/app/src/main/res/layout/dialog_success.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
+        android:tint="@color/orange"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/icons_44px_success01" />
@@ -31,7 +32,7 @@
         android:layout_marginTop="11dp"
         android:letterSpacing="0.15"
         android:text="Success"
-        android:textColor="#ffffff"
+        android:textColor="@color/orange"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="@+id/isSuccessImageView"
         app:layout_constraintStart_toStartOf="@+id/isSuccessImageView"
