--- a/app/src/main/res/drawable-v24/corner_dialog.xml
+++ b/app/src/main/res/drawable-v24/corner_dialog.xml
@@ -7,10 +7,10 @@
 
     <!--<solid android:color="#FFFFFF" />-->
     <!--&lt;!&ndash; 形状的填充色 &ndash;&gt;-->
-    <solid android:color="#ffffff"/>
+    <solid android:color="@color/orange_dialog"/>
     <stroke
-        android:width="2dp"
-        android:color="#FFEDCC70" />
+        android:width="1dp"
+        android:color="#ffffff" />
     <!-- 边框宽度和颜色 -->
 
 
