--- a/app/src/main/res/layout/fragment_profile_child.xml
+++ b/app/src/main/res/layout/fragment_profile_child.xml
@@ -20,7 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="24dp"
+        android:tint="@color/orange"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
