--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout2"
     android:layout_width="match_parent"
-    android:layout_height="150dp">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardview_home_item"
@@ -13,7 +13,8 @@
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         app:cardCornerRadius="12dp"
-        app:cardElevation="12dp"
+        app:cardElevation="6dp"
+        app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -22,50 +23,14 @@
             android:id="@+id/image_home_backgroud"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:alpha="0.4"
             android:scaleType="centerCrop"
+            android:alpha="0.8"
             android:src="@drawable/holder"></ImageView>
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/text_home_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="TextView"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/image_home_photo"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <TextView
-                android:id="@+id/text_home_describe"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="TextView"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/image_home_photo"
-                app:layout_constraintStart_toEndOf="@+id/image_home_photo"
-                app:layout_constraintTop_toTopOf="@+id/image_home_photo" />
-
-            <ImageView
-                android:id="@+id/image_home_photo"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/corner_user_photo"
-                android:padding="2dp"
-                android:scaleType="fitXY"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:srcCompat="@mipmap/icon_moai" />
 
             <ImageButton
                 android:id="@+id/image_home_collection"
@@ -98,6 +63,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="TextView"
                 android:textColor="@color/white"
+                android:typeface="monospace"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -116,9 +82,10 @@
                 android:id="@+id/text_home_owner_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="28dp"
                 android:text="TextView"
                 android:textColor="@color/white"
+                android:typeface="monospace"
                 app:layout_constraintBottom_toBottomOf="@+id/text_home_collection_number"
                 app:layout_constraintEnd_toEndOf="@+id/image_home_trip_collection"
                 app:layout_constraintTop_toTopOf="@+id/text_home_collection_number" />
@@ -129,7 +96,6 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:layout_marginEnd="8dp"
                 android:paddingRight="0dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="@+id/text_home_collection_number"
@@ -141,5 +107,50 @@
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
+
+    <ImageView
+        android:id="@+id/image_home_photo"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="8dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardview_home_item"
+        app:srcCompat="@mipmap/icon_moai" />
+
+    <TextView
+        android:id="@+id/text_home_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="143dp"
+        android:layout_marginEnd="24dp"
+        android:paddingBottom="2dp"
+        android:text="TextView"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:typeface="monospace"
+        android:lines="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/image_home_photo"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/text_home_describe"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="4dp"
+        android:text="TextView"
+        android:typeface="monospace"
+        android:lines="2"
+        app:layout_constraintBottom_toBottomOf="@+id/image_home_photo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/image_home_photo" />
 
 </android.support.constraint.ConstraintLayout>
