--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,5 +18,9 @@
         <item name="android:windowBackground">@color/white</item>
     </style>
 
+    <style name="mySpinnerItemStyle" parent="ThemeOverlay.AppCompat.Dark">
+        <item name="android:textColor">#000</item>
+        <item name="android:color">#000</item>
+    </style>
 
 </resources>
