fix add point to empty trip bug

--- a/app/src/main/res/layout/dialog_add_trip.xml
+++ b/app/src/main/res/layout/dialog_add_trip.xml
@@ -9,9 +9,9 @@
         android:id="@+id/constraintLayout4"
         android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/corner_dialog_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +41,7 @@
             android:ems="10"
             android:hint="點擊輸入"
             android:inputType="textEmailAddress"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/text_add_trip_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_add_trip_title"
@@ -51,9 +52,9 @@
         android:id="@+id/constraintLayout5"
         android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/corner_dialog_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,6 +85,7 @@
             android:ems="10"
             android:hint="點擊輸入"
             android:inputType="textEmailAddress"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_add_trip_describe"
@@ -94,9 +96,9 @@
         android:id="@+id/constraintLayout6"
         android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/corner_dialog_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,7 +126,7 @@
             android:layout_height="22dp"
             android:layout_marginEnd="8dp"
             android:entries="@array/add_trip_country_list"
-            android:spinnerMode="dialog"
+            android:spinnerMode="dropdown"
             app:layout_constraintBottom_toBottomOf="@+id/text_add_trip_country"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_add_trip_country"
@@ -134,10 +136,10 @@
 
     <Button
         android:id="@+id/button_add_trip_starttime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/corner_dialog_background"
         android:text="出發日期"
         android:textColor="#996E6E6E"
@@ -146,10 +148,10 @@
 
     <Button
         android:id="@+id/button_add_trip_endtime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="33dp"
         android:background="@drawable/corner_dialog_background"
         android:text="結束日期"
         android:textColor="#996E6E6E"
@@ -158,12 +160,12 @@
 
     <Button
         android:id="@+id/button_add_trip_send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/corner_dialog"
         android:text="確認加入"
         app:layout_constraintBottom_toBottomOf="parent"
