--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -23,16 +23,17 @@
         android:layout_width="200dp"
         android:layout_height="110dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="230dp"
+        android:layout_marginTop="280dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/corner_home_color"
+        android:background="@drawable/corner_login_title"
         android:elevation="6dp"
         android:gravity="center"
         android:paddingLeft="8dp"
-        android:paddingTop="2dp"
+        android:paddingTop="3dp"
         android:paddingRight="8dp"
         android:paddingBottom="6dp"
         android:text="GoTrip"
+        android:textColor="@color/orange"
         android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,15 +45,17 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="190dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/icon_circle"
+        android:elevation="6dp"
         android:text="FACEBOOK LOGIN"
         android:textColor="@color/orange"
-        android:elevation="6dp"
-        android:typeface="monospace"
         android:textSize="18sp"
+        android:textStyle="bold"
+        android:typeface="monospace"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_login" />
 
