--- a/app/src/main/res/layout/fragment_addordeletepoint.xml
+++ b/app/src/main/res/layout/fragment_addordeletepoint.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
 
@@ -10,9 +10,9 @@
         android:id="@+id/constraintLayout9"
         android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/corner_dialog_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,6 +42,7 @@
             android:ems="10"
             android:hint="點擊輸入"
             android:inputType="textEmailAddress"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/text_point_place"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_point_place"
@@ -54,9 +55,9 @@
         android:id="@+id/constraintLayout8"
         android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/corner_dialog_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +88,7 @@
             android:ems="10"
             android:hint="點擊輸入"
             android:inputType="textEmailAddress"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/text_point_note"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_point_note"
@@ -98,9 +100,9 @@
         android:id="@+id/constraintLayout7"
         android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/corner_dialog_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -130,6 +132,7 @@
             android:ems="10"
             android:hint="點擊輸入"
             android:inputType="number"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/text_point_cost"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_point_cost"
@@ -140,9 +143,9 @@
         android:id="@+id/constraintLayout11"
         android:layout_width="300dp"
         android:layout_height="30dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/corner_dialog_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -170,7 +173,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:entries="@array/icon_type_list"
-            android:spinnerMode="dialog"
+            android:spinnerMode="dropdown"
             app:layout_constraintBottom_toBottomOf="@+id/text_point_type"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_point_type"
@@ -179,10 +182,10 @@
 
     <Button
         android:id="@+id/button_point_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/corner_dialog_background"
         android:text="時間"
@@ -193,12 +196,12 @@
 
     <Button
         android:id="@+id/button_point_check"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/corner_dialog"
         android:text="確認加入"
         app:layout_constraintBottom_toBottomOf="parent"
