--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -112,8 +112,8 @@
         android:id="@+id/image_home_photo"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -126,15 +126,15 @@
         android:id="@+id/text_home_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="143dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="145dp"
         android:layout_marginEnd="24dp"
+        android:lines="1"
         android:paddingBottom="2dp"
         android:text="TextView"
         android:textSize="18sp"
         android:textStyle="bold"
         android:typeface="monospace"
-        android:lines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image_home_photo"
         app:layout_constraintTop_toTopOf="parent" />
@@ -143,12 +143,14 @@
         android:id="@+id/text_home_describe"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="6dp"
+        android:gravity="center_vertical"
+        android:lines="1"
         android:text="TextView"
+        android:textSize="12sp"
         android:typeface="monospace"
-        android:lines="2"
         app:layout_constraintBottom_toBottomOf="@+id/image_home_photo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image_home_photo" />
